# BetterGraph

./: CMakeLists.txt  README.md  TypeOfGraph.md  bettergraph-config.cmake  directedpseudo.cpp  main.cpp  simplegraph.cpp
include/: AttributeAdder.hpp  BetterGraphInterface.hpp  DirectedPseudoGraph.hpp  Graph.hpp  HypotheseBase.hpp  HypotheseComparable.hpp  MatchBase.hpp  MatchComparable.hpp  PseudoGraph.hpp  SimpleGraph.hpp  conversion.hpp
